GROW-632 prevent wiki-content to overflow under sidebar

--- a/themes/grow-theme/src/css/grow/wiki/_wiki_content_main.scss
+++ b/themes/grow-theme/src/css/grow/wiki/_wiki_content_main.scss
@@ -1,4 +1,6 @@
 #wiki-content-main {
+	
+	overflow: auto;
     overflow-wrap: break-word;
     word-wrap: break-word;
 
